# psbrowser

./: .gitignore  Makefile  Makefile.am  NEWS  configure.ac  main.c  psbrowser.h
data/: Makefile.am  newbookmark.ui  newnode.ui  psbrowser.ui
data/pixmaps/: Makefile.am
doc/: Makefile.am  psbrowser.1
gui/: gui.py  login.ui  newnode.ui  psbrowser.ui  publish_atom2.ui
src/: Makefile.am  bookmark-new.vala  bookmark-store.vala  bookmarks.vala  connections.vala  loading.vala  main.vala  node-new.vala  resources.vala  ui-bookmarks.vala  window.vala
vapi/: Makefile.am  config.vapi  iksemel.vapi  taningia.vapi
